started building data handling and webscraping classes

--- a/data-exploration.ipynb
+++ b/data-exploration.ipynb
@@ -1,31 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# AFL Fantasy Player Picker"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Introduction\n",
-    "The aim of this project is to build an AFL Fantasy player selection program. One of the things I would like to test with this project is a philosophy for selecting players, namely buying points, not good players. The assumption being that you should think of players as point making machines, in a purely statistical manner, and ignore what your intuition and common wisdom tell you about their value. This is the idea that the Oakland A's used to break the win streak record for the BBL in America, which can be seen in the movie Moneyball. Obviously Baseball is fundementally different to AFL, and they thought of it as buying runs not points. If you were an AFL recruiter, thinking about what players to draft and pick up in the off season, there isn't a direct analogy to buying runs, because AFL is more dynamic. Luckily, I am not a recuiter and so I am not faced with the daunting task of recruiting players. I get to deal in the realm of simulating the real thing, by building a fantasy team."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Extracting Fantasy pricing data from DTlive"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -95,7 +70,7 @@
     }
    ],
    "source": [
-    "rows = soup.select(\"tbody tr\")\n"
+    "rows = soup.select(\"tbody tr\")"
    ]
   },
   {
